17日文残りの日っすサービス

--- a/LPIC/102/10.必須システムサービス_問題.md
+++ b/LPIC/102/10.必須システムサービス_問題.md
@@ -143,7 +143,7 @@ A,Cで。
 
 ---
 
-## 11
+## 11 ○
 
 特定のユーザーのatコマンドとbatchコマンドの使用を禁止したい場合、禁止するユーザーを追加して編集するファイルの名前を絶対パスで記述せよ。  
 
@@ -158,87 +158,518 @@ A,Cで。
 ---
 ---
 
-## 12
+## 12 ×
 
 systemdのタイマーを利用してtimer-test.serciveを実行したいと考えている。  
 タイマーユニットの設定ファイルの記述で正しいものはどれか？2つ。  
 
 →  
+まったくわからないのでとりあえずB。  
+
+Bは合ってた。もう一つだったか・・・。
+答えはA,B。解説が長い。  
+
+→  
+systemdはサービスをユニットという単位で数える。  
+まぁ、ここはsystemdの復習をかねて、1週したらまたやる。
 
 ---
 
-## 13
+## 13 ×
+
+システムの時刻を表示するコマンドは何か？  
+
+→  
+hwclock  
+sysclock  
+
+やったはずだが出てこなかった。  
+
+答えは`date`  
+
+→  
+ハードウェアクロック、システムクロック。  
+ハードウェアクロックを操作するコマンドはそれっぽい名前だが、システムクロックはそうではない。  
+
+普通にdateコマンド。  
 
 ---
 
-## 14
+## 14 ×
+
+コマンド実行時にタイムゾーンを変更して時刻を表示する方法はどれか？3つ。  
+
+→  
+A,B,C  
+UTC表示以外。  
+
+まじか・・。ABDか・・・。  
+dateコマンドは奥がふかいな。  
+
+→  
+環境変数TZでタイムゾーンを指定できる。  
+dateコマンドのオプションでタイムゾーン指定できるのは-u,-utc--uniersalの3通りだけ。
+なので`date --New_York`の指定は出来ない。  
+
+### UTC(Coordinated Universal Time)
+
+協定世界時。  
+今の世界で標準時として使っている時間。  
+日本時間から9時間引いた時間。  
+セシウム原子時計の時間。  
 
 ---
 
-## 15
+## 15 ○
+
+/etc/localtimeについての説明で正しいものはどれか？2つ。  
+
+→  
+消去方でB,Cかな。  
+
+Aはタイムゾーン名が記述されたとあるが、それを記述するだけなら環境変数TZだけで事足りる。  
+Dのシステムクロックであるなんて記述はそもそもおかしい。ファイルであるはずがない。  
+
+/etc/localtime  
+・システムクロックの時刻からローカルタイムへ変換するための時差情報が格納されている。  
+・Linuxのインストール時に指定したタイムゾーンに対応する/usr/share/zoneinfoの下のファイルがコピーされる。  
+ディストリビューションやバージョンによってはシンボリックリンクとして作成される場合がある。  
 
 ---
 
-## 16
+## 16 ○
+
+NTPによりシステム時刻を正しく設定した。  
+ハードウェアクロックもこのシステム時刻に合わせたい場合、__に適切なコマンドを記述して。  
+___ -u --systohc  
+
+→  
+hwclock  
+
+これ以外にないでしょう。  
+-u はutcの指定見たいです。  
+
+-w or --systohc :: ハードウェアクロックをシステムクロックに合わせる。  
+-s or --hctosys :: システムクロックをハードウェアクロックに合わせる。  
+
+あー。これか。w要素がどこにもないってやつ。
+でもよく考えたらシステムならsハード`ウェ`アのwって考えれば別に無くもないか。
 
 ---
 
-## 17
+## 17 ○
+
+CMOSクロック(ハードウェアクロック)にアクセスすることなく、システムクロックを設定するコマンドは何か？  
+
+→  
+date  
+
+意外に思うが立ち返るのは基本だ。  
 
 ---
 
-## 18
+## 18 ×
+
+NTPを利用することにより、NTPサーバーの時刻にシステム___を合わせることが出来ます。  
+英単語。  
+
+→  
+クロック?  
+
+まぁあってたんだが、カタカナじゃなくて英単語なのでclockじゃないとダメ見たい。
 
 ---
 
-## 19
+## 19 ×
+
+NTPクライアントプログラムについての説明で正しいものはどれか？2つ。  
+
+→  
+NTPクライアントがシステムクロックを修正するのは当たり前なのでAは正解だろう。
+ntpdは知ってるがntpdateは知らないので、知っているほう。
+
+A,D  
+うわー。全く別の奴だった・・・。
+B,C  
+
+→  
 
 ---
 
-## 1
+## 20 ○
+
+NTPを使用してシステム時計を設定するコマンドは何か？  
+
+→  
+ntpdate  
 
 ---
 
-## 1
+## 21 ×
+
+NTPサーバー(ntp.nict.jp)を使ってシステム時計(システムクロック)を設定する前に、システム時計の時刻が正しいかどうかを確認するコマンドをオプションも付けて__の部分に記述。  
+___ ntp.nict.jp  
+
+→  
+ntpq -c  
+`ntpdate -q`  
+
+小豆本でやってない。知らなくて当然だ。  
 
 ---
 
-## 1
+## 22 ×
+
+NTPデーモンが参照する設定ファイルの名前は何ですか？1つ。  
+
+→  
+C. /etc/ntpd.conf  
+
+おしい。
+D. /etc/ntp.confです。
 
 ---
 
-## 1
+## 23 ×
+
+NTPデーモンを外部NTPサーバーのスレーブにするには設定ファイルの___で指定する値を変更する必要がある。  
+___に概要する定説なConfigコマンド  
+
+→  
+わからない。覚えてない。  
+
+`server`が正解です。  
+そのまんまですが、覚えてないものは途端にわからなくなる。  
 
 ---
 
-## 1
+## 24 ×
+
+/etc/ntp.confに記載するiburstオプションについての説明で正しいものはどれか？2つ。  
+
+→  
+知らんけど、可能性的にB,C  
+C,Dだって。  
+
+→  
+iburstはNTPサーバーとの初期の同期にかかる時間を短縮するオプション。  
+serverコマンドのオプションとして指定する。  
+iburstを指定しない通常の場合は、64秒間隔でポーリングするが、指定するとNTPサーバーとの初期の同期時に2秒間隔で8個のパケットを送信して同期を取る。  
+
+``` txt : serverコマンドにiburstオプションを付加
+server 0.centos.pool.ntp.org iburst
+server 1.centos.pool.ntp.org iburst
+```
 
 ---
 
-## 1
+## 25 ○
+
+ntpdに代わる新しいNTPデーモンの名前は何か？デーモン名を  
+
+→  
+chronyd  
 
 ---
 
-## 1
+## 26 ○
+
+システムログを収集するソフトウェアについての説明で正しいものはどれか？3つ。  
+
+→  
+4つあって3つ選択。1つは明らかにおかしいのでABD  
+
+正解した。  
+3つも選ぶなら選択肢は6つにしたほうがいいぞ。  
+
+→  
+システムログを収集するLinuxのソフトウェア :: syslog , rsyslog , syslog-ng , systemd journal  
 
 ---
 
-## 1
+## 27 ×
+
+Linuxシステムのロギングデーモンであるsyslogdが、受け取ったメッセージの種類に応じて出力先を振り分けるために参照する設定ファイルの名前を絶対パスで記述してください。  
+
+→  
+×/etc/syslogd.conf  
+○/etc/syslog.conf  
 
 ---
 
-## 1
+## 28 ○
+
+syslogdの設定ファイルの中で、全てのカーネルメッセージをコンソールに表示したい場合、正しい記述を1つ選択してください。  
+
+→  
+kern.* /dev/console?  
+
+正直 consoleと迷ったがわざわざdevとつくのだからなんかあるだろうと思ってAを選んだら当たった。  
+こういう不確かな情報はしっかりしたものにしたいですね。  
 
 ---
 
-## 1
+## 29 ○
+
+/etc/syslog.confファイルの中で、ファシリティkernelでのプライオリティcrit以上の全てのメッセージを/var/log/messagesに記録したい場合、  
+ファシリティ.プライオリティの指定を記述せよ。  
+
+→  
+`kern.crit /var/log/messages`  
+これのほうが逆に簡単だ。  
+
+ファシリティ.プライオリティって言われてるから出力先まで書かなくてよかった。  
+試験の時は気を付けよう。  
 
 ---
 
-## 1
+## 30 ○
+
+/etc/syslog.confファイルの中で、特定のファシリティについて、ログは全て記録しないようにするプライオリティの指定を記述せよ。  
+
+→  
+none  
+
+これも大丈夫。  
 
 ---
 
-## 1
+## 31 ○
+
+カーネルやデーモンからのメッセージなど、システムのほとんどのメッセージを記録しているファイルは何ですか？  
+絶対パスで記述せよ。  
+
+→  
+/var/log/messages  
+
+これは最近見る機会があったから覚えた。  
+勉強の成果が現れた瞬間だったな。  
 
 ---
+
+## 32 ○
+
+セキュリティ強化のため、システム管理者がログを取得するサーバーがある。  
+各ホストのログをこのリモートホストに転送するために各ホストで設定するファイルは何か？  
+ファイル名のみ記述せよ。  
+
+→  
+syslog.conf  
+
+---
+
+## 33 △
+
+journalctlコマンドについての説明で正しいものはどれか？3つ。  
+
+→  
+わからんので、CDEで。  
+条件を指定して、そのログを収集できる。  
+
+当たったわ。
+まとめたけど、journalctlは奥が深い。  
+
+---
+
+## 34 ×
+
+メッセージをsystemd-journalに送ることでログに記録するコマンドは何か？コマンド名を記述せよ。  
+
+→  
+journal-log  
+
+あれ`systemd-cat`コマンドだったか。そっちはまとめてなかったわ。  
+もう一つあって、てっきりそれだと思ってた。  
+
+---
+
+## 35 ×
+
+任意のファシリティ、任意のプライオリティのメッセージをsyslogに送るには、どのようなコマンドを使えば良いか？  
+コマンド名のみ入力。  
+
+→  
+あー。こっちか・・・。  
+logctl
+
+あー。loggerコマンドか。  
+そのまんまだったわ。覚えておこう。  
+
+---
+
+## 36 ○
+
+古いログを別の名前で保存するとともに、元の名前の新しい空ファイルを作成する機能を持つコマンドはどれか？1つ。  
+
+→  
+logrotate  
+
+さぼってた部分が出たので、問題やる前にやったので正解するのは当たり前。  
+
+---
+
+## 37 ×
+
+LinuxのプリントサービスであるCUPSにおいて、登録されたプリンタのDeviceURIが指定されている設定ファイルの名前を標準的な絶対パスで記述してください。  
+
+→  
+×/etc/cups.conf  
+○/etc/cups/printers.conf  
+
+---
+
+## 38 ×
+
+CUPS(CommonUnixPrintingSystem) で使われるPPDは何の略か記述してください。  
+
+→  
+×PostPrintDescription  
+○Postscript Printer Description  
+
+残業続きの頭でやった問題だからなぁ。覚えてなくてしかたないか。  
+
+---
+
+## 39 ×
+
+プリンタの登録や削除などを行うCUPSの設定コマンドはどれか？1つ。  
+
+→  
+C. lprm  
+
+逆にめっちゃ簡単だ。
+いや、よく見たら違う。lprmは印刷要求を削除するコマンド。  
+プリンタの登録や削除とあるので、別のコマンドだ。  
+
+lpadminコマンドだそうです。  
+
+---
+
+## 40 △
+
+Ghostscriptの役割として正しい内容はどれか？1つ。  
+
+→  
+しらん・・・。B.「PostScriptデータを非PostScriptデータに変換する」で・・・。  
+
+合ってたけど、まぁまぐれなので△ですよ。  
+
+---
+
+## 41 ○
+
+Linuxの新しいプリントサービスであるCUPSは、レガシーなプリントシステムlpdと互換のコマンドラインインターフェースも提供している。  
+このコマンドの中でプリンタに印刷するコマンドはどれか？1つ。  
+
+→  
+lprコマンド
+
+---
+
+## 42 ×
+
+fileAをプリンタlp1に打ち出すにはどのようにすれば良いですか？2つ。  
+
+→  
+lpr -P lp1 fileA  
+lp -P lp1 fileA  
+
+lpコマンドの場合、プリンタの指定は-dオプションらしい。知らんわ。  
+なのでA,D  
+
+---
+
+## 43 ○
+
+sampleファイルを2部印刷するコマンドはどれか？2つ。  
+
+→  
+`lpr -#2`  
+`lp -n 2`  
+後はパイプの問題だが、なんだったか。  
+出力ファイル名を渡さないといけないから[|]でいいか。  
+
+A,D
+
+当たった。  
+
+---
+
+## 44 ○
+
+プリンタのフィルタを通さずに印刷するのはどれか？3つ。  
+
+→  
+`lpr -o raw`  
+`lp -o raw`  
+lpqは違うので消去法で`lpr -l file-name`  
+
+ADE
+
+当たった。
+
+→  
+lprコマンドでは -lオプションを使用しても同様に直接印刷できる。  
+
+---
+
+## 45 ○
+
+プリンタのキューを表示するコマンドはどれか？3つ。  
+
+→  
+lprってキュー見れたっけ？
+明らかに印刷するだけのコマンドなので除外。残った奴らを選ぶ。  
+
+A,B,C  
+
+当たった。  
+小豆本に乗ってないコマンドは勘弁してくれ。  
+
+---
+
+## 46 ×
+
+CUPSで印刷を停止する際に"Printer stopped by Admin"とメッセージを付けて出力したい場合、適切なコマンドを1つ選択せよ。  
+
+→  
+全く覚えはないが、停止なのでreject。無効化のdisableは別っぽい。
+プリンタの指定はあるのでPは必須。後はコメントだが、cっぽいけどPに引っ張られればmしかない。
+
+C. `cupsreject -p -m "printer stopped by admin" プリンタ名`  
+
+Bだって。disabelコマンドが正解だったみたいだ。その地点で終わり。  
+
+---
+
+## 47 ○
+
+現在設定されているロケール情報を表示するコマンドはどれか？1つ。  
+
+→  
+locale  
+
+これはまんまだったのを覚えている。  
+
+---
+
+## 48 ○
+
+国際化されたプログラムのメッセージ言語を、日本語(ja)に変更するために、~/.bash_profileに追加すべきコマンドはどれか？2つ。  
+
+→  
+export LANG=""  
+export LC_MESSAGES=""  
+
+B,C  
+
+---
+
+## 49 ○
+
+ファイルに格納された文字のエンコードを変換するコマンドはどれか？1つ。  
+
+→  
+iconv  
+
+最後の問題雑過ぎないか？
