--- a/LPIC/102/101復習.md
+++ b/LPIC/102/101復習.md
@@ -264,3 +264,33 @@ tar [オプション] ファイル名
 
 「aa」「bb」「cc」の3ファイルを1つにまとめて「hoge.tar」というアーカイブにしたい。
 `tar cf hoge.tar aa bb cc`
+
+---
+
+## lnコマンド
+
+ディレクトリやファイルへのリンクを登録するコマンド。  
+オプションなしで実行した場合、ハードリングが作成される。  
+[シンボリックリンクの作成、更新、削除、権限変更をしました。](https://qiita.com/pugiemonn/items/e5fb508df690a323ee14)  
+
+``` txt
+ln [オプション] リンク元 リンクファイル
+
+-s :: シンボリックリンクを作成する。
+-f :: 既に登録名が登録されているものであった場合、登録内容を上書きする。
+-i :: 既に登録名が登録されているものであった場合、登録内容を上書き登録するか確認する問い合わせがある。
+-n :: リンクの作成場所として指定したディレクトリがシンボリックリンクだった場合、参照先にリンクを作るのではなく、シンボリックリンクそのものを置き換える。(-fと組み合わせて使用する。)
+```
+
+testディレクトリの中のdata01.datのリンクをd01という名前で作成する。  
+`ln test/data01.dat d01`  
+
+testディレクトリの中のdata01.datのシンボリックリンクをd02symbolという名前で作成する。  
+`ln -s test/data01.dat d02symbol`  
+
+ディレクトリへシンボリックリンクを貼る  
+`ln -nfs ディレクトリのパス シンボリックリンクを貼るディレクトリのパス`  
+
+currentディレクトリへシンボリックリンクを更新する。  
+`ln -nfs /var/www/pugiemonn.com/releases/20150510043839 current`  
+やっぱり強制上書きになるよな。  
