--- a/LPIC/102/9.管理タスク.md
+++ b/LPIC/102/9.管理タスク.md
@@ -476,6 +476,12 @@ iconv [オプション] [入力ファイル名]
 シンボリックリンクの場合  
 `ln -s /usr/share/zoneinfo/Asia/Tokyo /etc/localtime`  
 
+### /etc/localtime
+
+- システムクロックの時刻からローカルタイムへ変換するための時差情報が格納されている。  
+- Linuxのインストール時に指定したタイムゾーンに対応する/usr/share/zoneinfoの下のファイルがコピーされる。  
+  ディストリビューションやバージョンによってはシンボリックリンクとして作成される場合がある。  
+
 ### 環境変数TZ
 
 環境変数`TZ`で設定もできる。  
