--- a/Trivia/雑学.md
+++ b/Trivia/雑学.md
@@ -46,6 +46,14 @@ https://gigazine.net/news/20200807-hair-deforms-steel-blade/
 [寝床が暖かくなる毛布の順番](https://weathernews.jp/s/topics/201901/070075/)  
 やっぱり毛布を一番下にするのがベストらしい。
 
+
+## ヴィーガン
+
+完全菜食主義者のこと。
+卵や乳製品を含む、動物性食品を一切口にしない。
+
+---
+
 ## Amazon系
 
 ### ブラックフライデーのポイント
