--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -481,6 +481,24 @@ Vueの開発の時にCommonLanguageInterfaceと頭文字が同じなので、つ
 
 ---
 
+## log4j
+
+巷で話題ではあるが、何が悪いのかさっぱりわからなかったのでまとめ。  
+ツイッターで解説が出ていたけど、確かにやばいわ。  
+
+[【log4jのヤバさを一般人でもわかるように説明する】](https://twitter.com/ito_yusaku/status/1471767438308315138)  
+>・音声レコーダーを屋内に置いていました。  
+>・その音声レコーダーは実はアレクサでした。  
+>・アレクサには全ての権限を与えられていました。  
+>・屋外の音を屋内にそのまま伝えるスピーカーが設置されていました。  
+
+[log4jの、非プログラマ向けの説明](https://twitter.com/MitAtoM/status/14716787772522618929)  
+・議事録係がいて、ふだんはみんなの発言をそのまま記録している。  
+・誰かが今すぐまんじゅう買って食べたいとしゃべったら、議事録係がまんじゅうを買いに行ってしまうことが分かった  
+・事務所のあちこちの部屋に入れる鍵を持っているので、勝手に動くととてもヤバい  
+
+---
+
 ## 雑記
 
 https://neco913.kirara.st/post-12827/
