trycatch,json,systemd,gitflow,模試

--- a/LPIC/101/1.システムアーキテクチャ.md
+++ b/LPIC/101/1.システムアーキテクチャ.md
@@ -1,4 +1,4 @@
-# システムアーキテクチャ(主題101)
+# システムアーキテクチャ
 
 ## ハードウェア設定の決定と設定
 
@@ -7,12 +7,12 @@ pciデバイスの格納ファイル
 
 
 接続されたUSBデバイスの情報を表示するコマンドは?
-  また、接続されたUSBデバイスの情報が格納されたファイルは?
+  また、接続されたUSBデバイスの情報が格納されたファイルは?
 /proc/bus/usb/devices
 
 
 udevがデバイスファイル作成時に使用する設定ファイルが
-  配置されるディレクトリは?（フルパスで）
+  配置されるディレクトリは?（フルパスで）
 /etc/udev/rules.d
 
 
@@ -21,12 +21,12 @@ udevがデバイスファイル作成時に使用する設定ファイルが
 
 
 モデム、TA(ターミナルアダプタ)などが属しているUSBのデバイスクラスは?
-  （先頭3文字のみとする）
+  （先頭3文字のみとする）
 ACM
 
 
 modprobeの設定ファイルに記述する設定で
-  ロードしたくないカーネルモジュールを指定するキーワードは?
+  ロードしたくないカーネルモジュールを指定するキーワードは?
 blacklist
 
 
