--- a/LPIC/102/10.必須システムサービス.md
+++ b/LPIC/102/10.必須システムサービス.md
@@ -209,6 +209,22 @@ quit :: 対話状態を終了する。
 時刻ソースとなるNTPサーバー毎の情報を表示する。  
 `chronyc sources`  
 
+### systemdのタイマー
+
+cronのsystemd版。  
+systemdにもタイマーを設定して実行してくれる機能があるらしい。  
+
+atコマンド、crontabコマンドは一般ユーザーでも利用できるが、systemdのタイマーはroot権限を持つユーザーしか設定出来ない。  
+cronと同じく、一定間隔あるいは指定した時刻でサービスを実行することが出来る。  
+タイマーの設定はサフィックスを.timeとしてunit設定ファイルを作成する。  
+2種類のタイマーがある。  
+
+- monotinic timer  
+  指定した間隔で1回、あるいは複数回、サービスを実行する。  
+- realtime timer  
+  指定した時刻にサービスを実行する。  
+
+
 ---
 
 ## システムログの設定
