--- a/LPIC/102/101復習.md
+++ b/LPIC/102/101復習.md
@@ -57,32 +57,79 @@ export [オプション] [変数名[=値]…]
 
 ---
 
+## systemd
+
+[これからSystemd入門する](https://qiita.com/bluesDD/items/eaf14408d635ffd55a18)  
+>systemdとは？  
+>Linuxの起動処理やシステム管理を行う仕組み。  
+>CentOS7より採用。  
+
+起動したときに一番最初に起動されるinitプロセス。  
+各種サービスの管理等を行うプログラム。  
+
+## systemd関連の主なデーモンプロセス
+
+systemdは複数のデーモンプロセス(常駐プロセス)が連携して動作する。
+
+systemd :: systemdのメインプロセス  
+systemd-journald :: ジャーナル(ログ)管理プロセス  
+systemd-loging :: ログイン処理プロセス  
+systemd-networkd :: ネットワーク管理プロセス  
+systemd-timesyncd :: システムクロック同期プロセス  
+systemd-resolved :: 名前解決プロセス  
+systemd-udevd :: デバイス動的検知プロセス  
+
+## Unit
+
+systemdでは、システムの起動処理は多数のUnitと呼ばれる処理単位にわかれている。  
+サービスを起動するUnit,ファイルシステムをマウントするUnit等がある。  
+
+service :: 各種サービスを起動する。  
+device :: 各種デバイスを表す。  
+mount :: ファイルシステムをマウントする。  
+swap :: スワップ領域を有効にする。  
+target :: 複数のUnitをグループ化する。  
+timer :: 指定した日時や間隔で処理を実行する。  
+
+httpd.serviceはhttpd(Webサーバー)サービスの起動に使われるUnit。  
+
 ## systemctlコマンド  
 
+systemdでサービスを管理するためのコマンド。  
 サービス起動デーモンsystemdのコントロール用コマンド  
 
-サービス起動 :: systemctl start ${Unit}  
-サービス停止 :: systemctl stop ${Unit}  
-サービス再起動 :: systemctl restart ${Unit}  
-サービスリロード :: systemctl reload ${Unit}  
-サービスステータス表示 :: systemctl status ${Unit}  
-サービス自動起動有効 :: systemctl enable ${Unit}  
-サービス自動起動無効 :: systemctl disable ${Unit}  
-サービス自動起動設定確認 :: systemctl is-enabled ${Unit}  
-サービス一覧 :: systemctl list-unit-files --type=service  
+``` txt
+systemctl サブコマンド [Unit名] [-t 種類]
+
+サブコマンド
+start :: サービス起動 
+stop :: サービス停止
+restart :: サービス再起動
+reload :: サービスリロード
+status :: サービスステータス表示
+is-active :: サービスが稼働しているかどうか確認する。
+enable :: サービス自動起動有効
+disable :: サービス自動起動無効
+is-enabled :: サービス自動起動設定確認
+list-unit-files :: サービス一覧
+```
+
 設定ファイルの再読込 :: systemctl daemon-reload  
 
-sudo systemctl restart httpd
-サービス起動
-sudo systemctl start dotnetcorewebOES.service
-サービス起動自動起動有効
-sudo systemctl enable dotnetcorewebOES.service
-サービス停止
-sudo systemctl stop dotnetcorewebOES.service
-サービス再起動
-sudo systemctl restart dotnetcorewebOES.service
-サービスステータス確認
-sudo systemctl status dotnetcorewebOES.service
+サービス起動  
+`sudo systemctl start dotnetcorewebOES.service`  
+
+サービス起動自動起動有効  
+`sudo systemctl enable dotnetcorewebOES.service`  
+
+サービス停止  
+`sudo systemctl stop dotnetcorewebOES.service`  
+
+サービス再起動  
+`sudo systemctl restart dotnetcorewebOES.service`  
+
+サービスステータス確認  
+`sudo systemctl status dotnetcorewebOES.service`  
 
 ---
 
