--- a/LPIC/102/11.ネットワークの基礎.md
+++ b/LPIC/102/11.ネットワークの基礎.md
@@ -18,19 +18,18 @@
 - アドレス長が128bit  
 - 16進数表記  
 - ユニキャスト、エニーキャスト、マルチキャストをサポート。  
-ブロードキャストはサポートしていない。  
-ブロードキャストはマルチキャストで行う。  
+  ブロードキャストはサポートしていない。  
+  ブロードキャストはマルチキャストで行う。  
 - アドレス表記法  
-①各ブロックの先頭の「0」は省略できる  
-②「0」が連続するブロックは省略して[::]と表記できる。(1か所だけ)  
+  ①各ブロックの先頭の「0」は省略できる  
+  ②「0」が連続するブロックは省略して[::]と表記できる。(1か所だけ)  
 - プロトコル番号,ポート機能はIPv4と同じ。  
 - IPSec標準有効  
 - IPv4アドレスと直接通信出来ない。変換が必要。  
 - IPv4のネットワーク部に相当する部分を**プレフィックス**、ホスト部に相当する部分を**インターフェースID**という  
 - プレフィックス、インターフェースIDともに64ビット  
-- IPv6のポート番号の表記法  
-`[IPアドレス]:ポート番号`  
-例:[fe80:20c:29ff:fe55:94ef]:80  
+- IPv6のポート番号の表記法 → `[IPアドレス]:ポート番号`  
+  例:[fe80:20c:29ff:fe55:94ef]:80  
 
 ※プロトコル番号  
 上位層のプロトコルを識別するための番号。
@@ -66,16 +65,26 @@ etc...
 
 ### ウェルノウンポート  
 
-|番号|プロトコル|サービス|説明|
-|:--|:--|:--|:--|
-|20|TCP|FTP|データ転送|
-
-- 20 :: TCP :: FTP :: データ転送
-- 21 :: TCP/UDP :: FTP :: 制御通信
+- 20 :: FTP :: データ転送  
+- 21 :: FTP :: 制御通信  
 - 22 :: SSH  
-- 53 :: UDP  
+- 23 :: Telnet  
+- 25 :: SMTP :: 電子メール  
+- 53 :: DNS  
+- 80 :: HTTP  
 - 110 :: POP3  
-- 631 :: CUPSの設定ポート
+- 123 :: NTP  
+- 143 :: IMAP :: 電子メール(IMAP2/IMAP4)  
+- 161 :: SNMP :: ネットワークの監視  
+- 162 :: SNMP Trap :: ネットワークの監視(警告通知等)  
+- 389 :: LDAP :: ディレクトリサービス  
+- 443 :: HTTPS  
+- 465 :: SMTPS  
+- 514 :: Syslog :: ロギングサービス  
+- 631 :: CUPSの設定ポート  
+- 636 :: LDAP over SSL/TLS  
+- 993 :: IMAPS  
+- 995 :: POP3S  
 
 ### /etc/servicesファイル  
 
