--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -499,8 +499,44 @@ Vueの開発の時にCommonLanguageInterfaceと頭文字が同じなので、つ
 
 ---
 
+## QA(Quality Assurance)
+
+品質保証のこと。  
+Assurance : [名詞] : 保障,保険  
+アシュランスと読んでおけば問題なさそう。  
+
+Gitのブランチのルールを調べていた時の話。  
+Releaseブランチが担当する部分。  
+Masterにリリースする直前にDevelopから派生して品質を向上させてからMasterにマージするためのブランチ。  
+
+---
+
+・メーリングリスト
+複数の人に同時に電子メールを配信する仕組み。
+1．登録メンバーの電子メールアドレスのリスト
+2．メーリングリスト宛の代表電子メールアドレス
+を用意する。
+代表アドレスへ送信されたメールをリストに登録されたメンバー全員のアドレスへ転送するもの。
+
+comroomみたいなものか
+
+---
+
+・IIS(Internet Information Servise)
+Windows標準のWebサーバーサービス
+HTTP/HTTPS,FTP,SMTP,NNTPなどの基本的なプロトコルはサポートしている
+
+---
+
+・ASP.NET(Active Server Page を.Net向けにしたもの)
+Webアプリケーションフレームワークで動的なウェブサイトやWebアプリケーションやXML Webサービスの開発や運用を行う
+
+---
+
+・ダンプファイル
+メモリやレジスタ、ファイルのある瞬間の中身を丸ごと記録したファイル
+DBではバックアップのためにある瞬間のDBの内容を丸ごとコピーしたファイルのことをいう
+
+---
+
 ## 雑記
-
-https://neco913.kirara.st/post-12827/
-https://tsudoi.org/weblog/5712/
-
