--- a/LPIC/102/10.必須システムサービス_問題.md
+++ b/LPIC/102/10.必須システムサービス_問題.md
@@ -385,6 +385,32 @@ chronyd
 →  
 システムログを収集するLinuxのソフトウェア :: syslog , rsyslog , syslog-ng , systemd journal  
 
+syslog  
+4種類の中で最も古い。  
+1980年代にEric Allman氏(Sendmailの開発者)が開発。  
+Syslogプロトコルとして標準化。  
+ファシリティ、プライオリティの始まり。  
+
+rsyslog  
+Rainer Gerhards氏が主開発者であるrsyslogプロジェクトによって2004年から開発が始まる。  
+Syslogプロトコルをベースとして、TCPの利用、マルチスレッド対応、セキュリティの強化、各種データベース(MySQL,PostgreSQL,Oracle等)への対応。  
+**rsyslog.confはsyslogの設定ファイルsyslog.confと後方互換性がある。**  
+
+syslog-ng  
+Balazs Scheidler氏が主開発者であるsyslog-ngプロジェクトによって1998年から開発が始まった。  
+Syslogプロトコルに対応し、TCPの利用やメッセージのフィルタリング機能等の特徴がある。  
+**syslog-ng.confはsyslog.confとは書式が異なるため互換性がない。**  
+
+systemd journal  
+systemdが提供するログ機能。  
+システムログの収集はsystemd-journaldデーモンが行う。  
+カーネル、サービス、アプリケーションから収集したログを不揮発性ストレージ(/var/log/journal/machine-id/*.journal)  
+揮発性ストレージ(/run/log/journal/madhine-id/*.journal)に構造化したバイナリデータとして格納される。  
+※揮発性ストレージは再起動すると消える。runフォルダはメモリ上の仮想ファイルを扱う領域のため。  
+揮発性、不揮発性の設定はjournald.confの中でパラメータStorageにより指定する。  
+Syslogプロトコル互換のインターフェース(/dev/log,/run/systemd/journal/syslog)も備えている。  
+収集したシステムログをrsyslogd等の他のSyslogデーモンに転送して格納する構成にすることもできる。  
+
 ---
 
 ## 27 ×
