シェル1週。デスク途中。

--- a/LPIC/102/99_スピードマスター模試.md
+++ b/LPIC/102/99_スピードマスター模試.md
@@ -8,6 +8,10 @@
 
 B
 
+~/.bashrc :: ログイン後のBash起動時  
+~/.profile or ~/.bash_profile :: ログイン時のBash起動時  
+~/.login :: ログイン時のcsh or tcsh の起動時に実行されるが、Bashでは起動されない。  
+
 ## 2 ○
 
 A
@@ -16,9 +20,14 @@ A
 
 A
 
+echo $?は直前に実行したコマンドの終了ステータス。  
+
 ## 4
 
 B
+
+~/.profile  
+これ一回もやったことがない問題だ。  
 
 ## 5 ○
 
