--- a/Other/技術的参考集.md
+++ b/Other/技術的参考集.md
@@ -6,3 +6,8 @@
 [IT資格試験『合格のコツ』と『取組みポイント』　～40超の資格取得経験から～](https://qiita.com/ksj555/items/6ff5598c1429c0bc190a)  
 
 [ソフトウェアエンジニアと技術力](https://speakerdeck.com/soudai/developer-lifework)  
+
+[レベル高いエンジニアが働く土壌ができていない状態で、お金積んでレベル高いエンジニアを雇ったらどうなるの？](https://twitter.com/shin_semiya/status/1473231873866608640)  
+→  
+辞める。  
+自社の欠点がどこかを高い解像度から芯を句った指摘をされる。  
