--- a/LPIC/102/7.シェルとシェルスクリプト.md
+++ b/LPIC/102/7.シェルとシェルスクリプト.md
@@ -8,13 +8,19 @@
 コマンドの別名を定義したり、コマンドとそのオプションをまとめて1つの新しいコマンドとして実行できる。  
 
 ``` txt
-alias 別名 = `コマンド`
+alias
+登録されている全てのエイリアスが表示される。
+
+alias [エイリアス名='コマンド']
+エイリアスを登録する。
+既に登録されている別名と同じ別名で再定義した場合、上書きされる。  
+通常の場合はシングルクオート、コマンドが2語以上になる場合は、シングルクォート（'）もしくはダブルクォート（"）で括ることに注意。  
 ```
 
-- 単一引用符で括っているのは、コマンドとオプションの間のスペースがシェルによって解釈されないようにするため。  
-- 本来のコマンド名と同じエイリアスを定義した場合、エイリアス側が実行される。  
-- 本来のコマンドを実行したい場合は頭に`\`を付けて実行するか、パス付きで実行する。  
-  →`\ls` or `/bin/ls`  
+単一引用符で括っているのは、コマンドとオプションの間のスペースがシェルによって解釈されないようにするため。  
+本来のコマンド名と同じエイリアスを定義した場合、エイリアス側が実行される。  
+本来のコマンドを実行したい場合は頭に`\` or `バックスラッシュ`を付けて実行するか、パス付きで実行する。  
+→`\ls` or `/bin/ls`  
 
 `ls`と入力した時に`ls -l`コマンドが実行されるようにする。  
 `alias ls = 'ls -l'`  
@@ -90,7 +96,7 @@ declare [オプション] [名前]
 declare [オプション] [名前=値]
 
 オプション
--f → 現在定義されている関数を全て表示する。
+-f → 現在定義されているシェル関数を全て表示する。
 -F → 現在定義されている関数名を全て表示する。
 -p → 現在定義されている変数を全て表示する。
 -P → 現在定義されている変数名を全て表示する。
@@ -100,8 +106,10 @@ declare [オプション] [名前=値]
 
 シェルの設定を確認、変更するコマンド。  
 101の時は環境変数を確認するためのコマンドとして認識していた物。  
-シェル変数、関数も確認できる。  
-**オプションの有効は「-」オプションの無効は「+」**  
+
+引数なしで実行した場合、表示できるもの :: 環境変数、シェル変数、シェル関数  
+オプションの有効は「-」、オプションの無効は「+」。直観的な認識と逆なので注意。  
+シェルのオプションの設定状態を確認する時は`set -o`コマンドを実行する。  
 
 ``` txt
 set [-o][+o] [オプション]
@@ -115,26 +123,76 @@ emacs :: emacs風のキーバインドにする。
 ignoreeof :: Ctrl + Dによってログアウトしないようにする。
 noclobber :: 出力リダイレクトによる上書きを禁止する。
 noglob :: メタキャラクタを使ったファイル名展開を無効にする。
+          (ワイルドカードによる展開(*や?)が無効になる。)
 vi :: vi風のキーバインドにする。
 ```
+
+noclobberとnoglobが毎回わからなくなるので注意。  
+
+### envコマンド
+
+環境変数を表示するコマンド。  
+そのほか、環境変数を一時的に変更したり、削除したりしてコマンドを実行できる。  
+設定されている環境変数の値を一時的に指定された値に変更してコマンド実行するのもこいつ。  
+
+``` txt
+env [オプション] [環境変数名=値] [コマンド]
+
+オプション
+-i :: 何も環境変数が設定されていない状態にする。
+-u 環境変数名 :: 環境変数を一時的に削除する。
+環境変数名=値 :: 環境変数の値を一時的に指定された値に変更する。
+(オプションなし) :: 全ての環境変数を表示する。
+```
+
+何も環境変数が設定されていない状態で、「sample.sh」というコマンド（スクリプト）を実行する。  
+`env -i ./sample.sh`  
+こうすることで、シェルを実行するときに、余計な環境変数に影響されることがなくなるのだろう。  
+
+「TEST_A」という環境変数を一時的に「999」に変更して、「sample.sh」というコマンド（スクリプト）を実行  
+`env TEST_A=999 ./sample.sh`  
+
+### printenvコマンド
+
+指定した環境変数のみを表示するコマンド。  
+未指定の場合、全ての環境変数を表示する。  
+
+### 早見表
+
+set :: 全てのシェル変数、シェル関数、環境変数  
+env :: 環境変数  
+printenv :: 環境変数  
+declare -f :: シェル関数
 
 ### bashの設定ファイル
 
 シェルを起動するたびに環境変数やエイリアス、関数などを定義するのは非効率なので、それらの定義を自動的に行うための設定ファイルが用意されている。  
 
-/etc/profile → ログイン時に実行され、全ユーザーから参照される。  
-/etc/bash.bashrc → bash起動時に実行され、全ユーザーから参照される。  
-/etc/bashrc → ~/.bashecから参照される。  
-~/.bash_profile → ログイン時に実行される。  
-~/.bash_login → ~/.bash_profileがない場合、ログイン時に実行される。  
-~/.profile → ~/.bash_profileも~/.bash_loginもない場合、ログイン時に実行される。  
-~/.bashrc → bash起動時に実行される。  
-~/.bash_logout → ログアウト時に実行される。  
+``` txt
+/etc/profile :: ログイン時に実行され、全ユーザーから参照される。  
+/etc/bash.bashrc :: bash起動時に実行され、全ユーザーから参照される。  
+/etc/bashrc :: ~/.bashrcから参照される。  
+~/.bash_profile :: ログイン時に実行される。  
+~/.bash_login :: ~/.bash_profileがない場合、ログイン時に実行される。  
+~/.profile :: ~/.bash_profileも~/.bash_loginもない場合、ログイン時に実行される。  
+~/.bashrc :: bash起動時に実行される。  
+~/.bash_logout :: ログアウト時に実行される。  
+```
 
 ### /etc/profileファイル
 
 bashのログイン時に実行される。  
-システムを利用する全てのユーザーが、ログイン後すぐに必要となる基本的な環境変数を設定していくファイル。  
+システムを利用する全てのユーザーが、ログイン後すぐに必要となる基本的な**環境変数**を設定していくファイル。  
+
+### /etc/bash.bashrcファイル
+
+Debian系のシステムで全ユーザーのbash起動時に共通の処理を記述するファイル。  
+bash.bashrcとかbashを2回も使うふざけた名前であることに注意。  
+
+### /etc/bashrcファイル
+
+システムを利用する全ユーザーに対する設定を記述するファイル。
+あるコマンドのエイリアスを全ユーザーで使用できるようにするためには、このファイルを編集する。  
 
 ### ~/.bash_profileファイル
 
@@ -145,27 +203,72 @@ bashのログイン時に実行される。
 
 対話型シェルが起動されるたびに実行される。  
 システムを利用する全ユーザーに対する設定は/etc/bashrcに記述し、~/.bashrcから呼び出すようになっている。  
+ログインシェルとしてbashが起動した際に、読みこむ設定がない場合は読みこまれない。  
+その設定は`~/.bash_profile`に記述されているらしい。  
+
+### ~/.profileファイル
+
+Bashあるいはshが読み取って実行するファイル。  
+記述内容はシェル構文に従う。  
+ファイルに読み取り権は必要。実行権は不必要。  
+ホームディレクトリにあるので、rootユーザーは関係ない。  
+ユーザーにのみファイルの読み取り件を付ける必要がある。→ない。  
+
+### ~/.bash_logoutファイル
+
+bashがログアウトの直前に実行するスクリプトであり、ログアウト前に行いたい処理を記述する。  
+画面をクリアする clear コマンドなどを記述する。  
 
 ### 読み込み順
 
-bashをログインシェルとして起動した場合  
+bashは起動のされ方によって扱いが変わります。  
+・ログインシェル ：: /etc/passwdに設定され、ユーザーのログイン時に最初に起動されるシェル。このシェルが終了するとログアウトされる。  
+・対話型シェル :： ログインシェルから別のプロセスとして起動するシェル（例：直接/bin/bashを実行する）  
+
+ログインシェルとしてbashが起動すると、環境変数の設定などユーザー環境にかかわるものが記述されている全ユーザー共通、また、各ユーザー個別の環境設定ファイルを読み込みます。  
+これらのファイルはシェル上で実行できるコマンドが記述されたシェルスクリプトです。  
+
+これらの設定ファイルはsourceコマンド（指定したシェルスクリプトを読み込み、現在のシェルで実行する）によって実行されており、  
+ファイルに読み取り権とファイルが存在するディレクトリに検索権（ディレクトリに設定されたパーミッション「x」 は実行権ではなく検索権と呼ぶ）があれば実行可能です。  
+
+#### bashをログインシェルとして起動した場合  
 
 1. /etc/profile  
-2. /etc/bash.bashrc ← 設定によって読みこんだり読みこまなかったりする  
+2. /etc/bash.bashrc ← 設定によって読みこんだり読みこまなかったりする(Debian系のみ読み込みらしい)  
 3. ~/.bash_profile  
 4. ~/.bash_login  
 5. ~/.profile  
-6. ~/.bashrc  
+6. ~/.bashrc ← 読みこむ設定がない場合は読みこまれない。  
 7. /etc/bashrc  
 
-bashコマンドを実行してbashを起動した場合  
+基本的に、先にprofile。後にrc。  
+最初はetc。次に.~/。最後にまたetc。  
+profile読んだ後にlogin読みこんでprofileを読みこむクソ仕様なので注意。  
+
+#### 対話型シェルを起動した際に読みこまれるファイル、bashコマンドを実行してbashを起動した場合  
 
 1. ~/.bashrc  
 2. /etc/bashrc  
 
+対話型として起動した場合は、profileは読みこまれない事に注意。  
+
 ### 非ログインシェル
 
 ユーザーがログインした後に、ターミナルエミュレーターを開くことで起動するシェルを実行したり、コマンドラインから別のシェルを起動したりしたシェルの事  
+
+### おまけ : 代表的な環境変数まとめ
+
+``` txt
+HISTFILE :: コマンド履歴保存ファイルのパス
+HISTSIZE :: 現在のシェルでコマンド履歴の保存数
+HISTFILESIZE :: コマンド履歴保存ファイルへの履歴保存数
+HOSTNAME :: ホスト名
+HOME :: ログインしているユーザーのホームディレクトリ
+LANG :: ロケール(言語設定)
+PATH :: コマンドやプログラムを検索するディレクトリのリスト
+PWD :: カレントディレクトリパス
+USER :: ログインしているユーザー
+```
 
 ---
 
@@ -200,17 +303,33 @@ Web連携のログを抜き出すアレと言えば話は早いだろう。
 パスの通っているディレクトリ内にあるスクリプトファイルは「./」を付けなくても実行できる。  
 変数PATHに「.」を追加する事はセキュリティ上のリスクをはらむらしい。  
 
+`実行権`がないシェルスクリプトを実行するには、`source`コマンドを使用する。  
+但し`source`コマンドを実行するには、シェルスクリプトに`読み取り権`と、シェルスクリプトが存在するディレクトリに`検索権`が必要。  
+`source`コマンドは「.(ドット)」で代用できる。  
+
+設定を即座に反映させるには、現在のシェルでスクリプトを実行できるsourceコマンドを使用します。  
+
 ### コマンドの実行結果をシェル変数に代入する方法  
 
 - コマンドを`$()`で囲んで、その結果をシェル変数に代入する。  
 - コマンドをバッククオート「`」で囲んでその結果をシェル変数に代入する。  
+
+bashにはコマンドの実行結果を文字列として扱う「コマンド置換」機能があります。コマンド置換は次の書式で実行します。  
+
+・`実行コマンド`（バッククォート、日本語キーボードではSHIFT+@）  
+・$(実行コマンド)  
+
+`$echo $HOSTNAME`  
+→`testserver.localdomain`  
+`$ echo $(echo $HOSTNAME)`  
+→`testserver.localdomain`  
 
 ### sourceコマンド
 
 ファイルに書かれたコマンドを現在のシェルで実行する事を指示するコマンド。  
 主にシェルの設定を反映させる際に使用する。  
 
-sourceコマンドはシェルに組み込まれたビルトインコマンドで、bashやtcsh,zshに共通して使用できる。
+sourceコマンドはシェルに組み込まれたビルトインコマンドで、bashやtcsh,zshに共通して使用できる。  
 ビルトインコマンド「.」の処理内容はsourceと全く同じ。  
 
 ``` txt
@@ -220,15 +339,16 @@ source ファイル [ファイル実行時の引数]
 オプションはない。
 ```
 
-bash ファイル名
-ファイル名
+bash ファイル名  
+ファイル名  
 
-で実行した場合はbashの子プロセスが立ちあがり、
+で実行した場合はbashの子プロセスが立ちあがり、  
 
 ### execコマンド
 
 子プロセスを生成するのではなく、現行プロセスを引数で指定したコマンドに入れ替えて実行するコマンド。  
 bashの組み込みコマンド。  
+指定したコマンドを既存のジョブ(シェルとプロセス)と置き換えて実行するコマンドとも言えるらしい。  
 
 ### シェルスクリプトの特殊変数
 
@@ -246,6 +366,10 @@ $* → 全ての引数 ( 区切りは環境変数IFSで指定したもの )
 
 シェルスクリプトの実行後 `echo $?` と実行して 0 が帰ってくるならスクリプトが正常終了したことが分かる。  
 bashのプロンプトで`echo $$`を実行した場合のプロセスIDはシェル自身のプロセスIDが格納される。  
+
+10番目以降の引数を参照する時は${10}のように「{}」で囲う必要があります。  
+「{}」を使用しないとシェルは「$1 + "0"」のように誤った解釈をします。  
+そのため、$10および$11はそれぞれ「a0」と「a1」のように表示されます（aは1番目の引数）。  
 
 ### if文
 
@@ -269,6 +393,10 @@ case 式 in
     ~~~
 esac
 ```
+
+case式はforeachでないくせに[in]であることに注意。  
+実行文の最後は[;]ではなく[;;]であることに注意。  
+最後はcaseの反対文字(esac)になるタイプであることに注意。  
 
 ### for文
 
@@ -318,7 +446,7 @@ END
 ```
 
 格納変数は複数定義可能。  
-上記例の場合、a=1,b=2,C=3 4 5 6 となる。
+上記例の場合、a=1,b=2,C=3 4 5 6 となる。  
 そういう仕様らしい。  
 
 ### testコマンド
@@ -344,8 +472,8 @@ test [条件文]
 
 [ファイルの特性に関する条件式]
 -e ファイル → 指定したファイルが存在すれば真
-ファイル1 -nt ファイル2 → 指定したファイル1が指定したファイル2よりも修正時刻が正しければ真
-ファイル1 -or ファイル2 → 指定したファイル1が指定したファイル2よりも修正時刻が古ければ真
+ファイル1 -nt ファイル2 → 指定したファイル1が指定したファイル2よりも修正時刻が正しければ真(newer than)
+ファイル1 -ot ファイル2 → 指定したファイル1が指定したファイル2よりも修正時刻が古ければ真(older then)
 
 [文字列に関する条件式]
 -n 文字列 → 文字列の長さが0より大きければ真
@@ -376,9 +504,28 @@ test構文 :: `text 条件式`
 主にシェルスクリプトで使用する。  
 
 ``` txt
-seq 開始数値 終了数値
-seq 終了数値
+seq 開始する数値 終了する数値
+seq 終了する数値(1から開始)
+seq 開始する数値 増加する値 終了する数値
 ```
+
+1,2,3,4,5をforで出力する。  
+→  
+`seq 1 5` or `seq 5` or `seq 1 1 5`  
+
+`seq 1-5` or `seq 1 to 5`は間違いだから注意ね。  
+
+### 制御演算子
+
+`&&` :: command1が成功した場合のみcommand2を実行する。  
+`||` :: command1が失敗した場合のみcommand2を実行する。  
+`;` :: コマンドを続けて実行する。  
+
+制御演算子との間にスペースは無くて良い模様。  
+
+command1を実行し、続けてcommand2を実行させたい。ただし、command1が失敗した場合はcommand2を実行しないこととする。下線部にあてはまる語句は次のうちどれか。  
+→  
+&&  
 
 ---
 
