デスクトップ1週

--- a/LPIC/102/8.ユーザーインターフェースとデスクトップ_pingt.md
+++ b/LPIC/102/8.ユーザーインターフェースとデスクトップ_pingt.md
@@ -339,8 +339,36 @@ c → b → a → e → d
 b → a → e → d → c
 
 →  
+最初はわからなかったので飛ばしたが、選択肢的に何か無ければこれを読むって流れは外せないので、最初にstartxを実行して次にinitという流れさえ覚えてしまえば十分だった。  
+先にユーザー設定。ユーザー設定が無ければシステム設定。  
 
+→  
+正解  
+b → a → e → d → c
 
+解説
+startxコマンドはCUI環境（ランレベル3）で実行すると、X Window Systemを起動させるコマンドです。
+
+以下はstartx実行時の流れです。  
+
+startxコマンドを実行  
+↓  
+xinitコマンドを実行  
+↓  
+ホームディレクトリの[~/.xinitrc]を実行  
+ない場合は[etc/X11/xinit/xinitrc]を実行  
+↓  
+GNOME等のウィンドウマネージャーを起動  
+
+したがって正解は
+・b → a → e → d → c
+です。
+
+startxコマンドの実体はスクリプトです。X Window Systemの環境を整えるのに必要なコマンドの実行、設定ファイルのパスが書かれています。
+なお、既にログインしている状態でコマンドを実行するので、ユーザー認証を行うディスプレイマネージャは起動しません。
+通常は実行ユーザのデスクトップ環境が表示されます。
+
+その他の選択肢は正しい順序ではありませんので、誤りです。
 
 ---
 
@@ -766,6 +794,299 @@ id:5:initdefault:
 ・startx
 ・startgui
 書式が誤っています。なお、startxは、Linux起動後に「CUI環境」から「GUI環境」を起動するコマンドです。
+
+---
+
+### 5104
+
+4画面までのマルチモニタやネットワーク経由でのUSB転送など、VNCがサポートしていない多くの機能をサポートしている画面転送プロトコルはどれか。
+
+VDI
+RDP
+SPICE
+XDMCP
+FTP
+
+→  
+正解
+SPICE
+
+解説
+SPICE（Simple Protocol for Independent Computing Environments）は、オープンソースとして開発されている画面転送プロトコルです。SPICEは4画面までのマルチモニタやネットワーク経由でのUSB転送など、VNCがサポートしていない多くの機能をサポートしています。
+仮想マシンへのリモートデスクトップ接続においても、VNCは仮想マシンのゲストOS（仮想マシン上で動作するOS）にインストールしたVNCサーバがゲストOSの画面出力をキャプチャしてクライアントに送信するのに対して、SPICEでは仮想マシンのホスト（仮想環境の土台）にインストールしたSPICEサーバが仮想マシンの画面出力をクライアントに送信して直接操作することができます。
+
+したがって正解は
+・SPICE
+です。
+
+その他の選択肢については以下のとおりです。
+
+・VDI
+VDI（Virtual Desktop Infrastructure）は仮想デスクトップ環境のことなので、誤りです。
+
+・RDP
+RDP（Remote Desktop Protocol）はWindows標準のリモートデスクトップ機能で使用される通信プロトコルなので、誤りです。
+
+・XDMCP
+XDMCP（X Display Manager Control Protocol）はXサーバとXクライアント間を制御するプロトコルなので、誤りです。
+
+・FTP
+FTP（File Transfer Protocol）はファイル転送用のプロトコルなので、誤りです。
+
+---
+
+### 4691
+
+LinuxやWindows、macOSなど異なるOS間で接続できるリモートデスクトップソフトウェアは次のうちどれか。
+
+GNOME
+XDMCP
+VNC
+RDP
+Xfce
+
+→  
+正解  
+VNC
+
+解説
+他のコンピュータのデスクトップ画面をネットワーク経由で遠隔から操作することをリモートデスクトップといいます。
+VNC（Virtual Network Computing）は、LinuxやWindows、macOSなど異なるOS間で接続できるリモートデスクトップソフトウェアです。デスクトップを操作される側のコンピュータにVNCサーバを、操作する側のコンピュータにはVNCクライアントをインストールします。
+
+したがって正解は
+・VNC
+です。
+
+下図はWindowsのVNCクライアントからCentOS7のデスクトップへ接続している画面です。
+【図を表示】
+
+その他の選択肢については以下のとおりです。
+
+・RDP
+RDP（Remote Desktop Protocol）は、Windows標準のリモートデスクトップ機能で使用される通信プロトコルです。
+
+・XDMCP
+XDMCP（X Display Manager Control Protocol）は、XサーバとXクライアント間を制御するプロトコルです。
+
+・GNOME
+GNOMEはRed Hat Enterprise Linux、CentOSなどで標準のデスクトップ環境です。
+
+・Xfce
+Xfce（エックスエフシーイー）は、メモリやCPUの消費量が少ない軽量のデスクトップ環境です。
+
+---
+
+### 5023
+
+「/etc/X11/xorg.conf」のセクションの書式について、正しいものを選べ。
+
+セクションは「"セクション名" Section」から始まり、「EndSection」で終わる
+セクションは「Section "セクション名"」から始まり、「EndSection」で終わる
+セクションを分けるのは空白行なので、一行あけると別セクションとなる
+セクションは「"セクション名"」から始まり、「EndSection」で終わる
+
+→  
+正解
+セクションは「Section "セクション名"」から始まり、「EndSection」で終わる
+
+解説
+各セクションは「Section "セクション名"」から始まり、「EndSection」で終わります。
+以下はセクションの例です。
+<img src="/mondai3/img/jpg/kkkk35064.jpg">
+
+以上より、正解は
+・セクションは「Section "セクション名"」から始まり、「EndSection」で終わる
+です。
+
+その他の選択肢は、いずれも誤りです。
+
+---
+
+### 4868
+
+統合デスクトップ環境の説明として適切なものは次のうちどれか。
+モニタの画面表示やキーボード、マウスなどのハードウェアを管理する
+処理した結果をXサーバを介してウィンドウに表示させる
+GUI環境とアプリケーションをまとめて統一的な操作を提供する仕組み
+ユーザにGUI環境のログインを提供する
+
+→
+統合デスクトップ環境という言葉のイメージでは、環境そのものを提供してくれるパッケージみたいな印象を受けるが、なぜか知らんが、操作を提供する仕組みという記述があることに注意だな。  
+操作ってなんやねんって感じ。  
+
+→  
+正解
+GUI環境とアプリケーションをまとめて統一的な操作を提供する仕組み
+
+解説
+統合デスクトップ環境とは、ディスプレイマネージャやウィンドウマネージャなどユーザが使用するGUI環境と、アプリケーションを統合したデスクトップ環境です。
+
+したがって正解は
+・GUI環境とアプリケーションをまとめて統一的な操作を提供する仕組み
+です。
+
+代表的な統合デスクトップ環境に「GNOME」と「KDE」があります。
+
+以下はGNOMEの例です。
+【図を表示】
+
+以下はKDEの例です。
+【図を表示2】
+
+その他の選択肢については以下のとおりです。
+
+・ユーザにGUI環境のログインを提供する
+ディスプレイマネージャについての説明ですので、誤りです。
+
+・モニタの画面表示やキーボード、マウスなどのハードウェアを管理する
+Xサーバについての説明ですので、誤りです。
+
+・処理した結果をXサーバを介してウィンドウに表示させる
+Xクライアントについての説明ですので、誤りです。
+
+---
+
+### 4867
+
+ウィンドウマネージャは次のうちどれか。
+
+KDM
+xwin
+GDM
+XDM
+twm
+
+→
+WindowManageなのでt'wm'を選んだら正解だった。  
+xwinもそれっぽかったが、存在しないのね。  
+というか、twmって小豆本にも出てなかったので完全に語句で応えただけだった。  
+ほかはKwinとかMutterね。  
+
+→
+正解
+wm
+
+解説
+ウィンドウマネージャは、 ウィンドウの概観、アイコンやカーソル、メニューなどを提供するXクライアントのアプリケーションです。
+「twm」は最小限の機能を備えたウィンドウマネージャです。
+
+したがって正解は
+・twm
+です。
+
+以下は表示例です。
+【図を表示2】
+
+他にもKDE標準のウィンドウマネージャ「kWin」などがあります。
+
+その他の選択肢は以下の通りです。
+・XDM
+X.Org標準のディスプレイマネージャですので、誤りです。
+
+・GDM
+GNOME標準のディスプレイマネージャですので、誤りです。
+
+・KDM
+KDE標準のディスプレイマネージャですので、誤りです。
+
+・xwin
+存在しないウィンドウマネージャです。
+
+---
+
+### 5145
+
+仮想マシンへのリモートデスクトップ接続について正しいものはどれか。(3つ選択)
+
+VNCサーバは仮想マシンのゲストOSにインストールする
+SPICEでは仮想マシンの画面出力を直接扱える
+VDIは仮想デスクトップ環境のことである
+VNCは仮想マシンへのリモートデスクトップ接続ができない
+SPICEサーバは仮想マシンの各ゲストOSにインストールする
+
+→  
+ホストとゲストの違いがあいまい。  
+つまり、ホストはサーバーPCの事だろう。  
+ゲストはサーバーに接続する側だろう。  
+そう考えればミスリードはなくなる。  
+VNCは各ゲストにインストールする。  
+SPICEはホストにインストールする。  
+ややこしいな。  
+
+→  
+正解
+SPICEでは仮想マシンの画面出力を直接扱える
+VNCサーバは仮想マシンのゲストOSにインストールする
+VDIは仮想デスクトップ環境のことである
+
+解説
+VDI（Virtual Desktop Infrastructure）は仮想デスクトップ環境のことです。
+VDIにアクセスするためにはVNC（Virtual Network Computing）のようなリモートデスクトップソフトウェアや、SPICE（Simple Protocol for Independent Computing Environments）のような画面転送プロトコルが必要になります。
+
+仮想マシンへのリモートデスクトップ接続において、VNCは仮想マシンのゲストOS（仮想マシン上で動作するOS）にインストールしたVNCサーバがゲストOSの画面出力をキャプチャしてクライアントに送信するのに対して、SPICEでは仮想マシンのホスト（仮想環境の土台）にインストールしたSPICEサーバが仮想マシンの画面出力をクライアントに送信して直接操作することができます。
+
+したがって正解は
+・VDIは仮想デスクトップ環境のことである
+・SPICEでは仮想マシンの画面出力を直接扱える
+・VNCサーバは仮想マシンのゲストOSにインストールする
+です。
+
+その他の選択肢については以下の通りです。
+
+・SPICEサーバは仮想マシンの各ゲストOSにインストールする
+SPICEサーバは仮想マシンのホスト（仮想環境の土台）にインストールするので、誤りです。
+
+・VNCは仮想マシンへのリモートデスクトップ接続ができない
+VNCで仮想マシンへリモートデスクトップ接続できるので、誤りです。
+
+---
+
+### 5071
+
+点字に関するアクセシビリティの説明として適切なものは次のうちどれか。(2つ選択)
+
+点字キーボードは、通常のキーボードの上に点字のカバーをかぶせて入力できる
+点字ディスプレイは、スクリーンの一部を拡大して表示する
+点字ディスプレイは、文字データを点字に変換して専用点字ディスプレイに出力する
+点字キーボードは、点字の一文字を表す6つの点に対応する6点キーで入力できる
+点字ディスプレイは、スクリーンに表示された文字を読みあげる
+
+→  
+点字専用ディスプレイなるものがあるのか。知らなんだ。  
+てか、ちゃんとメモしてたな。  
+存在感なさすぎてわからなかった。  
+
+→  
+正解  
+点字ディスプレイは、文字データを点字に変換して専用点字ディスプレイに出力する
+点字キーボードは、点字の一文字を表す6つの点に対応する6点キーで入力できる
+
+解説  
+以下は主なアクセシビリティです。
+<img src="/mondai3/img/jpg/k35169.jpg">
+
+上表より正解は
+・点字ディスプレイは、文字データを点字に変換して専用点字ディスプレイに出力する
+・点字キーボードは、点字の一文字を表す6つの点に対応する6点キーで入力できる
+です。
+
+一般的な点字は6つの点の凹凸で一文字を表します。
+【図を表示】
+
+点字ディスプレイ、点字キーボードの詳細については参考URLをご参照ください。
+
+その他の選択肢については上表をご確認ください。
+なお、「点字キーボードは、通常のキーボードの上に点字のカバーをかぶせて入力できる」は間違った説明なので、誤りです。
+
+
+
+
+
+
+
+
+
+
 
 
 
