管理タスク1週

--- a/LPIC/102/101復習.md
+++ b/LPIC/102/101復習.md
@@ -341,3 +341,28 @@ testディレクトリの中のdata01.datのシンボリックリンクをd02sym
 currentディレクトリへシンボリックリンクを更新する。  
 `ln -nfs /var/www/pugiemonn.com/releases/20150510043839 current`  
 やっぱり強制上書きになるよな。  
+
+---
+
+### UID
+
+UIDとは、複数の利用者（user）を一意に識別するための識別子（identifier）。  
+または、一意（unique）の識別子。 具体的な仕様や規約はシステムの種類によって異なる。  
+
+### SUID(Set User ID)
+
+実行権のあるファイルに設定される特殊なアクセス権です。  
+通常、実行ファイルを実行すると、そのファイルを実行したユーザーの権限で実行されますが、SUID（Set User ID）が設定されたファイルでは、  
+その実行ファイルの所有者のアカウント権限で実行されます。  
+
+### SGID(Set Group ID)
+
+SUIDのグループバージョン。  
+そのファイルを所有しているグループの権限で実行される。  
+
+### スティッキービット（Sticky Bit)
+
+スティッキービット（Sticky Bit）とは、ディレクトリに設定される特殊なアクセス権の事です。  
+スティッキービットが設定されたディレクトリは、すべてのユーザがファイルおよびディレクトリを作成書き込みを行えるようになる。  
+しかし、作成したファイルやディレクトリを削除出来るのは所有者だけとなるというパーミッション。  
+
