--- a/LPIC/102/12.セキュリティ.md
+++ b/LPIC/102/12.セキュリティ.md
@@ -157,7 +157,8 @@ chage [オプション] [ユーザー名]
 
 ユーザーのログインを禁止するファイル  
 これが存在するだけでルートユーザー以外のログインは出来なくなる。  
-中身は空でもいいが、書いた内容は一般ユーザーがログインしようとしたときに表示される。  
+中身は空でもよい。
+記述した場合は、その内容が一般ユーザーがログインしようとしたときに表示される。  
 
 ### suコマンド
 
