--- a/LPIC/102/10.必須システムサービス.md
+++ b/LPIC/102/10.必須システムサービス.md
@@ -18,7 +18,7 @@ Linux起動時にハードウェアクロックを参照して設定されるが
 ### dateコマンド
 
 システムクロックを表示するコマンド。  
-rootユーザーはdateコマンドを使ってシステムクロックを変更できる。  
+rootユーザーはdateコマンドを使ってシステムクロックを設定できる。  
 
 ``` txt
 現在の日付を表示する。
@@ -66,7 +66,7 @@ cfz → create file zip
 ``` txt
 hwclock オプション
 
--r :: ハードウェアクロックを表示する。
+-r :: ハードウェアクロックを表示する。デフォルト動作なので省略可能。
 -w(--systohc) :: システムクロックの時刻をハードウェアクロックに設定する。
 -s(--hctosys) :: ハードウェアクロックの時刻をシステムクロックに設定する。
 -u :: utcを指定する。
@@ -103,12 +103,30 @@ set-ntp yes|no :: NTPを使うかどうか
 
 NTPネットワークは階層構造になっている。  
 最上位は原子時計やGPSなど、きわめて正確な時刻情報の提供元がある。  
-その直下にあるNTPサーバーをStratum1。
-その次をStratum2。
-数字は階層を下るに従って増えていく。  
-NTPサーバーは上位の複数のNTPサーバーから正確な時刻を取得する。  
+原子時計やGPSなどの正確な時計をstratum（ストレイタム：階層）0とし、その直下にあるNTPサーバーをStratum1。その次をStratum2。  
+最下層は stratum 16となる。  
+stratum 16のサーバからは時刻を取得することは出来ません。  
 
+NTPサーバーは上位の複数のNTPサーバーから正確な時刻を取得する。  
 NTPクライアントによるNTPサーバーとの時刻同期にはroot権限が必要。  
+
+ntpdの各種設定は`/etc/ntp.conf`で行う。  
+
+### /etc/ntp.conf
+
+ntpdの設定ファイル。  
+
+``` txt : 主な設定項目
+restrict :: ntpdへのアクセス制御を行う。
+server :: 時刻を取得するサーバーを指定。
+driftfile :: 自身の時刻のズレ具合を記録するファイルを指定。
+```
+
+serverにはネットワーク内部に設置したNTPサーバや、世界中にある公開NTPサーバ、プロバイダが提供するNTPサーバを指定します。  
+
+公開NTPサーバを利用する場合は、複数のNTPサーバ群で構成される「pool.ntp.org」プロジェクトに登録されている外部サーバ等を指定します。  
+「pool.ntp.org」を利用すると、複数のNTPサーバから、負荷分散の技術の一つである「DNSラウンドロビン」を利用して時刻を取得します。  
+例えば日本であれば「0.jp.pool.ntp.org」から「3.jp.pool.ntp.org」といったserverを指定することで、遅延の少ない、正確な時刻を入手できるようになります。  
 
 ### ntpdateコマンド
 
@@ -167,10 +185,40 @@ serverコマンドのオプションとして指定可能。
 
 ### ntpqコマンド
 
-NTPサーバーの状態を紹介するコマンド。  
+NTPサーバーの状態を照会するコマンド。  
 
-localhostで稼働しているNTPサーバーから問い合わせされているNTPサーバーのリストを表示する。
+``` txt
+ntpq [オプション] 接続先サーバー
+
+-p :: /etc/nptd.confのserverに指定したサーバーとの同期状態を一覧表示する。対話モードのpeersコマンドと同様。
+-i :: 対話モードで起動する(デフォルト)
+```
+
+localhostで稼働しているNTPサーバーから問い合わせされているNTPサーバーのリストを表示する。  
 `ntpq -p localhost`  
+
+``` txt : 表示項目の説明
+remote :: serverに指定したNTPサーバーのホスト。
+          先頭に「*」がついているものが時刻同期先。
+          「+」は時刻同期可能なサーバー。
+          「-」は参照しないことが決定したサーバーを意味する。
+refid :: remoteのサーバーの時刻参照先アドレス。
+         同期開始時は「.INIT.」を表示し、stratum1のサーバーでは「.GPS.」などを表示する。
+st :: remoteのサーバーのstratum。
+t :: ntpパケットの交換方法。uはユニキャストを表す。
+when :: 前回ntpパケットを交換してからの経過時間(秒)
+poll :: 時刻問い合わせの間隔(秒)。同期が安定すると間隔が自動で長くなっていく。
+reach :: 過去8回の時刻問い合わせ結果を8進数で表示。
+         8回全て成功で377(2進数で11 111 111)。
+         過去7回成功して直前が失敗すると376(11 111 110)。
+         過去7回失敗で直前が成功すると1(00 00 001)。
+delay :: ntpパケットの往復に要した遅延時間(ミリ秒)
+offset :: remoteのサーバーとの時刻のズレ(ミリ秒)
+jitter :: 同期した時刻とのずれ具合(ミリ秒)
+```
+
+時刻同期が安定してくると、poll間隔が自動で長くなっていく。  
+最大1024秒(約17分)ごとに時刻問い合わせを行うようになり、システムへの負荷が少なくなるようになって行く。  
 
 ### Chrony
 
