メール、ネットワーク、dns、html

--- a/HTML/ノウハウ.md
+++ b/HTML/ノウハウ.md
@@ -1,8 +1,60 @@
 # ノウハウ
 
+## これは全案件で必ず書いておくHTML/CSS
+
+[これは全案件で必ず書いておくHTML/CSS](https://twitter.com/tak_dcxi/status/1471627450106974215)  
+
+``` html
+<body>
+    <div class="SiteWrapper">
+        <header></header>
+        <main></main>
+        <footer></footer>
+    </div>
+</body>
+
+<style>
+    .SiteWrapper {
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+    }
+
+    main {
+        flex: 1;
+        overflow-x: hidden;
+    }
+</style>
+```
+
+---
+
 ## HTMLの複数行を左揃え中央寄せする
 
 [HTMLの複数行を左揃え中央寄せする](https://atelierroi.com/tecnicalnote/htmlcss/html%E3%81%AE%E8%A4%87%E6%95%B0%E8%A1%8C%E3%82%92%E5%B7%A6%E6%8F%83%E3%81%88%E4%B8%AD%E5%A4%AE%E5%AF%84%E3%81%9B%E3%81%99%E3%82%8B/)  
+
+``` html
+<body>
+    <div>
+        <p>
+            テキストテキストテキスト<br />
+            テキスト<br />
+            テキストテキストテキスト
+        </p>
+    </div>
+</body>
+<style>
+    div {
+        text-align: center;
+        display: block;
+    }
+
+    div p {
+        text-align: left;
+        display: inline-block;
+    }
+</style>
+```
 
 ## 文字を中央寄せにする
 
