--- a/LPIC/102/10.必須システムサービス.md
+++ b/LPIC/102/10.必須システムサービス.md
@@ -753,7 +753,8 @@ logrotate [オプション] 設定ファイル
 
 ### MTA(Mail Transfer Agent)
 
-メールの配送を行うプログラム。  
+メールの転送を行うプログラム。  
+ネットワーク経由、またはサーバ内部（ローカル）のメール転送依頼に基づき、指定された宛先へメールを転送する。  
 メールシステムの中心的役割を担う。  
 DNSサーバーを使用してメールの送信先となるMTAのホスト名を調べる。  
 SMTPプロトコルでメッセージをやり取りするため、SMTPサーバーとも呼ばれる。  
@@ -763,6 +764,8 @@ Exim,Postfix,Sendmailなど
 
 ### MDA (Mail Delivery Agent)
 
+ローカルのメールスプールへ配送するプログラム。  
+MTAによってローカルの宛先へのメールであると判断されたメールを受け取り、宛先ユーザのメールボックス（メールスプール）へメールを配送する。  
 MTAが受け取ったメールをローカルドメインのユーザーに配信する(メールスプールに格納する)プログラム。  
 
 MTAに対するMDAプログラム  
@@ -774,6 +777,9 @@ MTAに対するMDAプログラム
 ### MUA (Mail User Agenet)
 
 ユーザーがメールの送受信に使用するプログラム。  
+ユーザーがメールを扱うプログラム。  
+自身のメールボックスへアクセスして受信したメールを閲覧したり、メールを送信したりする。  
+MUAの例としては、LinuxのmailコマンドやThunderbird、WindowsやMac OS X付属のメールソフトがある。
 
 CUIベース : malix,mutt  
 GUIベース : Thunderbird,Evolution  
@@ -825,6 +831,38 @@ Sendmail : /var/spool/mqueue
 Exim : /var/spool/exim/input  
 Postfix : /car/spool/postfix/deferred  
 
+### Sendmail
+
+古くから使われるMTAで、様々なメール転送方式に対応している。  
+1つのプログラムで全ての処理を実行できる反面、設定は難解で専用のツールを使う必要がある。  
+また、セキュリティ面での問題がたびたび発生したり、処理速度が遅いなどの問題もある。
+
+``` txt : sendmailのメールスプールとキュー
+スプール :: /var/spool/mail    :: 受信メール     :: mail
+キュー   :: /var/spool/mqueue/ :: 返信待ちメール :: mailq
+```
+
+### Exim
+
+Debian系の標準MTA。  
+設定は平易だが、日本語の情報は比較的少ない。  
+設定ファイルの内容はバージョンによって異なる。  
+
+``` txt : Eximのメールスプールとキュー
+スプール :: /var/mail/   :: 受信メール     :: mail
+キュー   :: /var/spool/mqueue/ :: 返信待ちメール :: mailq
+```
+
+### Postfix
+
+sendmailとの高い互換性を保ちながら、処理を高速化している。  
+設定が平易でsendmailよりもセキュリティが向上しているため、最近の一部のLinuxディストリビューションで標準のMTAになっている。  
+
+``` txt : Postfixのメールスプールとキュー
+スプール :: /var/mail          :: 受信メール     :: mail
+キュー   :: /var/spool/mqueue/ :: 返信待ちメール :: mailq
+```
+
 ### /etc/aliasesファイル
 
 メールアドレスの別名を設定するファイル。  
@@ -832,22 +870,41 @@ Postfix : /car/spool/postfix/deferred
 adminとlpicはどちらもrootあてのメールを受け取れるようになるが、rootにはメールが届かなくなる。  
 設定の反映は`newaliases`コマンドで行う。  
 
-``` txt : /etc/aliasesの記述例
+・書式は「別名:転送先（メールアドレスやアカウント）」  
+・転送先が複数ある場合はカンマで区切って指定  
+
+``` txt : /etc/aliasesの記述例1
 root: admin,lpic
 ```
 
+``` bash: 記述例2
+#vi /etc/aliases
+support: root,postmaster, xxxx@yahoo.co.jp
+# newaliases ←設定を反映させるために必要
+```
+
 ### MTAの起動
+
+??
+なんのこうもくだ？
 
 ### mailコマンド
 
 コマンドラインでメールを受信したり、受信メールを確認したりするコマンド。  
 mailコマンドでユーザー名のみを指定するとローカルシステムのユーザー宛に送信される。  
--sはタイトル(Subject)を指定するオプション。  
-引数なしでコマンドを実行すると、メールボックスに届いているメールを確認できる。  
-`番号`でその番号のメールを選択。`q`で終了。
+
+``` txt : ※sendmailのメールスプールとキュー
+スプール :: /var/spool/mail/   :: 受信メール     :: mail
+キュー   :: /var/spool/mqueue/ :: 返信待ちメール :: mailq
+```
 
 ``` txt
-mail [-s 題名] [宛先メールアドレス or ユーザー名]
+■mail
+引数なしでコマンドを実行すると、メールスプール「/var/spool/mail」に格納されている受信メールを表示する。
+番号でその番号のメールを選択。qで終了。
+
+■mail [-s 題名] [宛先メールアドレス or ユーザー名]
+-sはタイトル(Subject)を指定するオプション。  
 ```
 
 ローカルシステム内のユーザーである「admin」にメールを送信する。  
@@ -862,6 +919,12 @@ this is a test e-mail
 
 メールを送信するコマンド。  
 CUIのMUAであるmalix,muttで利用する。  
+
+古くからあるMTAのsendmailでは、メール送信やMTAの制御のためにsendmailコマンドが用意されていました。  
+sendmailコマンドは引数無しで単独で実行すると、標準入力からメールのデータを受け取り、.（ピリオド）のみの行を受け取った時点でメールの送信を行います。  
+
+MUAの中にはsendmailコマンドを使ってメールの送信を行うものもあることから、sendmail以外のMTAでも互換性のためにsendmailコマンドが用意されています。  
+Postfixやeximでも、sendmailコマンドが用意されています。  
 
 ``` txt : 実行例
 sendmail yuki@mylpic.com < 送信する本文を格納したファイル
@@ -908,14 +971,6 @@ mana@mylpic.com
 因みにファイル名やディレクトリが「.(ドット)」から始まるのは隠しファイルや隠しフォルダ。  
 `~/`はホームディレクトリを表す。  
 
-### /var/spool/queue
-
-送信待ちメールの格納先  
-
-### /var/spool/mail
-
-受信待ちメールの格納先  
-
 ### オープンリレー
 
 外部からのメールを制限することなく他のドメインに中継する事。  
@@ -925,35 +980,66 @@ mana@mylpic.com
 
 因みに「外部からの名前解決リクエストに対して制限することなく答えを返すこと」をオーブンリゾルバという。  
 
+MTA(Mail Transfer Agent)は、通常SMTP（電子メール送信用のプロトコル）を利用して電子メールを送信します。  
+MTA間でメールの転送を行うことをリレー（中継）といい、リレー対象を制限せず、誰からのメール送信、  
+転送依頼でも受け付ける設定になっているMTA（SMTPサーバ）の事を「オープンリレー」といいます。  
+オープンリレーは誰でも利用できるため、悪質な迷惑メール（スパム）送信に使用されてしまいます。  
+そのためインターネットに公開された**SMTPサーバ**にはオープンリレー設定をするべきではありません。  
+
+### メール転送早見表
+
+``` txt
+設定ファイル    影響範囲        内容                  設定の反映方法
+/etc/aliases :: システム全体 :: 別名と転送先を記載 :: [newaliases]コマンドを実行
+~/.forward   :: ユーザー個別 :: 転送先を記載       :: 即時反映
+```
+
 ---
 
 ## プリンタ管理
 
 ### CPUS(Common Unix Printing System)
 
-印刷サブシステムらしい。  
+UNIXの印刷サービス。印刷サブシステムらしい。  
+以前はLPD（Line Printer Daemon）が使われていましたが、現在ではCUPS（Common Unix Printing System）が使われます。  
+CUPSはレガシーな印刷システムであるLPDとの互換性があります。  
 
-・IPP(Internet Printer Protocol)の採用  
-ネットワーク上のプリンタをサポートする印刷プロトコルIPPを採用。  
+``` txt : LPDと互換性のある印刷コマンド
+lpr  :: 印刷ジョブを生成し、プリントキューに登録
+lprm :: プリントキューにある印刷ジョブを削除
+lpq  :: プリントキューにある印刷ジョブを表示
+```
 
-・PPD(PostScript Printer Description)ファイルのサポート  
-AdobeのPPD形式のファイル(テキストファイル)でデバイスドライバの設定ができる。  
+``` txt : CUPSで標準的な印刷コマンド
+lp     :: 印刷ジョブを生成し、プリントキューに登録
+cancel :: プリントキューにある印刷ジョブを削除
+lpstat :: プリントキューにある印刷ジョブを表示
+```
 
-・Webベースで設定可能  
-Webブラウザから設定できるツールが組み込まれている。  
+- IPP(Internet Printer Protocol)の採用  
+  ネットワーク上のプリンタをサポートする印刷プロトコルIPPを採用。  
+- PPD(PostScript Printer Description)ファイルのサポート  
+  AdobeのPPD形式のファイル(テキストファイル)でデバイスドライバの設定ができる。  
+- Webベースで設定可能  
+  Webブラウザから設定できるツールが組み込まれている。  
+- プリンタクラスのサポート  
+  複数のプリンタを1台のプリンタに見せかける機能をサポートしている。  
+- `/etc/cups/ppd`  
+  PPDファイルを格納するためのディレクトリ  
+- `/var/spool/cups`  
+  印刷ジョブを溜めておくためのスプールディレクトリ。  
+- CUPSのデーモンはcupsd。  
+  cupsdは`/etc/cups/cupsd.conf`設定ファイルを参照して動作します。  
+- `/etc/cups/cupsd.conf`
+  CUPSの設定ファイル  
+  印刷要求をネットワーク経由で受け付ける場合のポート番号(631)や、接続するクライアントのアクセス許可の設定等。  
+- `/etc/cups/printers.conf`
+ プリンタに関する情報などの設定(プリンタの場所や共有設定など)  
+- 設定ポート :: 631  
+  localhost:631でアクセス。  
 
-・プリンタクラスのサポート  
-複数のプリンタを1台のプリンタに見せかける機能をサポートしている。  
-
-・PPDファイルの格納場所 :: `/etc/cups/ppdディレクトリ以下`  
-
-・CUPSの設定ファイル :: `/etc/cups/cupsd.conf`  
-→印刷要求をネットワーク経由で受け付ける場合のポート番号や、接続するクライアントのアクセス許可の設定等。  
-
-・プリンタに関する情報などの設定 :: `/etc/cups/printers.conf`  
-
-・設定ポート :: 631  
-→localhost:631でアクセス。  
+CUPSの設定ファイルが置かれるディレクトリは「/etc/cups/」です。  
+ここに、CUPSのデーモン「cupsd」の設定ファイル「/etc/cups/cupsd.conf」や、プリンタに関する設定を記述する「/etc/cups/printers.conf」があります。  
 
 設定の仕方  
 ①設定ファイルを直接編集。  
@@ -969,6 +1055,14 @@ Webブラウザから設定できるツールが組み込まれている。
 5. 処理した印刷データをCUPSのバックエンドに送る。  
 6. バックエンドは印刷データをローカル接続(USBなど)またはネットワークを経由(IPPやLPRなど)してプリンタに渡す。  
 
+ping-t解説  
+
+1. データを印刷プログラムによって印刷ジョブとしてスプーラ（スケジューラ）に登録する  
+2. スプーラは、スプールに溜まった印刷データを順に取り出してフィルタシステムに送る  
+3. フィルタはデータをPostScript形式に変換し、PostScript形式のデータをPPDファイルの定義に従って、印刷するプリンタ専用のラスタデータ形式に変換する。  
+   ラスタデータはバックエンドに送られる  
+4. バックエンドは、渡されたラスタデータを指定されたプリンタに送信する  
+
 ### CUPSサービスの起動
 
 SysVinitの場合  
@@ -980,21 +1074,31 @@ systemdの場合
 IPPサービス(ポート631/tcp)が開いていれば、CUPSは動作している。  
 `netstat -at | grep ipp`  
 
-### PPD(Postscript Printer Description)
+### PostScript , PPD(Postscript Printer Description)
 
-フォント、用紙サイズ、解像度など、PostScriptプリンタの機能を記述し制御するためのファイル。  
-アドビシステムズによって策定された。  
+アドビシステムズが開発したページ記述言語で、どういったデータをどのように描画するかという命令が記述されます。  
+
+PPDファイルとは、アドビシステムズが策定したファイル形式で、プリンタがPostScriptで記述されたデータをどのように扱うかを定義するファイルです。  
+(フォント、用紙サイズ、解像度など、PostScriptプリンタの機能を記述し制御するためのファイル)  
+
+ラスタデータとは、点の集合で作成された画像形式です（例：JPEG、BMPファイル）。  
+対称的な形式としてベクタデータ（数値や座標計算によって描画される画像形式）があります。  
+
+現在のプリンタの多くは各メーカー独自の形式で印刷データを扱います。  
+各プリンタ用のPPDファイルを用意することで、いったんPostScript形式に印刷データを変換することで、各メーカー独自の形式に変換することが容易になります。  
+そのため、CUPSではLPDよりも多くのプリンタに対応できるようになりました。  
 
 ### lprコマンド
 
 印刷コマンド。  
 指定されたファイルや標準入力をプリントキューに送る。  
+オプションでプリンタを指定しなければ、デフォルトのプリンタで印刷します。  
 
 ``` txt
 lpr [オプション] [ファイル名]
 
--# 部数 :: 印刷部数を指定する。
--P プリンタ名 :: 印刷を行うプリンタを指定する。
+-#部数      :: 印刷部数を指定する。
+-Pプリンタ名 :: 印刷を行うプリンタを指定する。-Pとプリンタ名の間に空白はないことに注意。
 ```
 
 テキストファイル testdata.txtを6部印刷する。  
@@ -1006,6 +1110,9 @@ lpr [オプション] [ファイル名]
 dmesgコマンドの出力を印刷する。  
 `dmesg | lpr`  
 
+「/etc/group」ファイルを「PrinterA」で印刷。  
+`lpr -PPrinterA /etc/group`  
+
 ### lpqコマンド
 
 BSD系におけるプリントキューの内容を表示するコマンド。  
@@ -1014,8 +1121,8 @@ BSD系におけるプリントキューの内容を表示するコマンド。
 ``` txt
 lpq [オプション] [ユーザー名] [ジョブ番号]
 
--a :: すべてのプリンタの情報を表示。
--P プリンタ名 :: 指定したプリンタの情報を表示。
+-a           :: すべてのプリンタの情報を表示。
+-Pプリンタ名 :: 指定したプリンタの情報を表示。
 ```
 
 ### lpcコマンド
@@ -1039,15 +1146,16 @@ lpc [コマンド]
 ``` txt
 lprm [オプション] [ジョブ番号]
 
--P プリンタ名 :: 指定したプリンタの印刷ジョブを削除
-- :: 自分の印刷ジョブをすべて削除
+-Pプリンタ名 :: 指定したプリンタの印刷ジョブを削除。
+-            :: 自分の印刷ジョブをすべて削除。
+                rootユーザーで実行した場合は、全ユーザーの印刷ジョブを削除する。
 ```
 
 自分の印刷ジョブを全て削除(一般)  
 `$ lprm -`  
 
-自分の印刷ジョブを全て削除(root)  
-`# lprm -`  
+PrinterBで問題を起こしている印刷ジョブ番号500の印刷ジョブをいったん取り消したい。  
+`lprm -PPrinterB 500`  
 
 ### lpadminコマンド
 
@@ -1074,6 +1182,9 @@ lpadmin -p プリンタ名 [オプション]
 
 ### lpコマンド
 
+CUPSの標準的な印刷コマンド。  
+印刷ジョブを生成し、プリントキューに登録する。  
+
 SystemV系のlprコマンド。  
 lprはBSD系らしい。  
 オプションの機能は同じなのに引数が違うというクソ仕様。  
@@ -1081,10 +1192,10 @@ lprはBSD系らしい。
 ``` txt
 lp [オプション] ファイル名
 
--d :: 指定したプリンタに出力する。指定しない場合はデフォルトプリンタが使われる。 lprにおける-P。
+-d      :: 指定したプリンタに出力する。指定しない場合はデフォルトプリンタが使われる。 lprにおける-P。
 -n 部数 :: numで指定した部数を出力する。lprにおける-#。
--o raw :: フィルタを通さずにプリンタに出力する。これはlprと同じ。
--l :: フィルタを通さずに直接印刷する。-oと動作的に同じらしい。
+-o raw  :: フィルタを通さずにプリンタに出力する。これはlprと同じ。
+-l      :: フィルタを通さずに直接印刷する。-oと動作的に同じらしい。
 ```
 
 sampleファイルを2部印刷する。  
@@ -1094,6 +1205,7 @@ sampleファイルを2部印刷する。
 
 ### lpstatコマンド
 
+CUPS標準の印刷ジョブを表示するコマンド。  
 SystemV系におけるプリンターのキューを表示するコマンド。  
 BSD系はlpqとlpc。  
 
@@ -1104,6 +1216,13 @@ lpstat [オプション]
 -p :: プリントキューが出力可能(enable)になっているか否かを表示。
 -t :: プリンタの状態をキューの状態を含めてすべて表示。  
 ```
+
+### cancelコマンド
+
+CUPS標準の印刷ジョブを削除するコマンド。  
+
+PrinterBの全ての印刷ジョブを削除する。  
+`cancel -a PrinterB`  
 
 ### cupsdisableコマンド
 
