--- a/LPIC/102/12.セキュリティ.md
+++ b/LPIC/102/12.セキュリティ.md
@@ -245,6 +245,7 @@ ulimit [オプション[リミット]]
 
 ## OpenSSH
 
+オープンソースのSSH実装のソフトウェア。  
 SSHプロトコルを利用するためのソフトウェア。  
 SSHサーバーおよびSSHクライアントを含む。  
 SSHを利用するために、現在世界で最も使われているSSH実装。  
